--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
 
     <section class="missionVision">
       <div class="container">
-        <div class="row my-5 align-items-center">
+        <div class="row  align-items-center ">
           <div class="col-md-6 p-2 order-md-2">
             <div class="aboutImg">
               <img src="img/manage.png">
@@ -115,7 +115,7 @@
             </ul>
           </div>
         </div>
-        <div class="row my-5 align-items-center">
+        <div class="row  align-items-center ">
           <div class="col-md-6 p-2 order-md-1">
             <div class="aboutImg">
               <img src="img/vision.png">
@@ -133,7 +133,7 @@
             </ul>
           </div>
         </div>
-        <div class="row my-5 align-items-center">
+        <div class="row  align-items-center ">
           <div class="col-md-6 p-2 order-md-2">
             <div class="aboutImg">
               <img src="img/mission.png">
