--- a/contact.html
+++ b/contact.html
@@ -107,38 +107,38 @@
             <div class="companyInfo ">
               <ul>
                 <li>
-                  <span><i class="fas fa-balance-scale"></i></span>
+                  <span><i class="fas fa-clinic-medical"></i></span>
                   <p class="ms-3">
                     Main office :
-                    <a href="#!">24 Omar lufti St, Camp shizar, 21525, Alexandria, Egypt</a>
+                    <a href="#!">Riyadh - Saudi Arabia</a>
                   </p>
                 </li>
                 <li>
                   <span><i class="fas fa-phone-office"></i></span>
                   <p class="ms-3">
                     Phone :
-                    <a href="tel:002035913834">(+203) 5913834</a>
+                    <a href="tel:#!">(+996) 123456789</a>
                   </p>
                 </li>
                 <li>
                   <span><i class="fas fa-phone"></i></span>
                   <p class="ms-3">
                     Mobile :
-                    <a href="tel:00201122268288">(+20) 1122268288 </a>
+                    <a href="tel:#!">(+996) 0123456789 </a>
                   </p>
                 </li>
                 <li>
                   <span><i class="fas fa-envelope"></i></span>
                   <p class="ms-3">
                     Email :
-                    <a href="mailto:info@nahasandpartners.com ">info@nahasandpartners.com </a>
+                    <a href="mailto:info@nawatmedical.com ">info@nawatmedical.com </a>
                   </p>
                 </li>
                 <li>
                   <span><i class="fas fa-globe"></i></span>
                   <p class="ms-3">
                     Website :
-                    <a href="mailto:www.nahasandpartners.com">www.nahasandpartners.com</a>
+                    <a href="mailto:www.nawatmedical.com">www.nawatmedical.com</a>
                   </p>
                 </li>
               </ul>
@@ -154,8 +154,8 @@
           <div class="col-md-6 order-md-2 mb-5 mb-md-0">
             <section class="googleMap ">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d27295.91667214567!2d29.96822054330243!3d31.22101796451287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s24%20Omar%20lufti%20St%2C%20Camp%20shizar%2C%2021525%2C%20Alexandria%2C%20Egypt!5e0!3m2!1sar!2seg!4v1643840377451!5m2!1sar!2seg"
-                frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d927764.3550487261!2d47.38299600868243!3d24.724150391445495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f03890d489399%3A0xba974d1c98e79fd5!2z2KfZhNix2YrYp9i2INin2YTYs9i52YjYr9mK2Kk!5e0!3m2!1sar!2seg!4v1648196197721!5m2!1sar!2seg"
+              frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </section>
           </div>
           <div class="col-md-6 order-md-1">
