--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           <div class="swiper-slide  mainSlideItem" style="background-image:url(img/s1.jpg)">
             <div class=" info">
               <h2> Welcome to </h2>
-              <h1> Nawat Medical Medical </h1>
-              <a href="#!" class="default-btn"> <i class="fas fa-info me-2"></i> About Us
+              <h1> Nawat Medical </h1>
+              <a href="about.html" class="default-btn"> <i class="fas fa-info me-2"></i> About Us
                 <span></span>
               </a>
             </div>
@@ -57,7 +57,7 @@
             <div class=" info">
               <h2> Science is </h2>
               <h1> Nothing But Perception </h1>
-              <a href="#!" class="default-btn"> <i class="fas fa-info me-2"></i> About Us
+              <a href="products.html" class="default-btn"> <i class="fas fa-first-aid me-2"></i> Our Products
                 <span></span>
               </a>
             </div>
@@ -66,7 +66,7 @@
             <div class=" info">
               <h2> Devoted To </h2>
               <h1> Healthcare Since 1980 </h1>
-              <a href="#!" class="default-btn"> <i class="fas fa-info me-2"></i> About Us
+              <a href="blogs.html" class="default-btn"> <i class="fad fa-blog me-2"></i> Our Blogs
                 <span></span>
               </a>
             </div>
@@ -119,7 +119,7 @@
                     explicabo praesentium
                     necessitatibus, laboriosam doloremque laborum ab enim! Magni, commodi. In vero, at culpa unde
                     obcaecati quod inventore. </p>
-                  <a href="#!" class=""> More Details </a>
+                  <a href="#!" class="more"> More Details </a>
                 </div>
               </div>
               <div class="swiper-slide p-1">
@@ -132,7 +132,7 @@
                     explicabo praesentium
                     necessitatibus, laboriosam doloremque laborum ab enim! Magni, commodi. In vero, at culpa unde
                     obcaecati quod inventore. </p>
-                  <a href="#!" class=""> More Details </a>
+                  <a href="#!" class="more"> More Details </a>
                 </div>
               </div>
               <div class="swiper-slide p-1">
@@ -145,7 +145,7 @@
                     explicabo praesentium
                     necessitatibus, laboriosam doloremque laborum ab enim! Magni, commodi. In vero, at culpa unde
                     obcaecati quod inventore. </p>
-                  <a href="#!" class=""> More Details </a>
+                  <a href="#!" class="more"> More Details </a>
                 </div>
               </div>
               <div class="swiper-slide p-1">
@@ -158,7 +158,7 @@
                     explicabo praesentium
                     necessitatibus, laboriosam doloremque laborum ab enim! Magni, commodi. In vero, at culpa unde
                     obcaecati quod inventore. </p>
-                  <a href="#!" class=""> More Details </a>
+                  <a href="#!" class="more"> More Details </a>
                 </div>
               </div>
               <div class="swiper-slide p-1">
@@ -171,7 +171,7 @@
                     explicabo praesentium
                     necessitatibus, laboriosam doloremque laborum ab enim! Magni, commodi. In vero, at culpa unde
                     obcaecati quod inventore. </p>
-                  <a href="#!" class=""> More Details </a>
+                  <a href="#!" class="more"> More Details </a>
                 </div>
               </div>
             </div>
