--- a/product-details.html
+++ b/product-details.html
@@ -41,7 +41,10 @@
           <a href="index.html"> home </a>
         </li>
         <li>
-          <a href="#!" class="active"> Careers </a>
+          <a href="blogs.html"> Blogs </a>
+        </li>
+        <li>
+          <a href="#!" class="active"> Product Details </a>
         </li>
       </ul>
       <figure>
@@ -63,79 +66,39 @@
           </g>
         </svg></figure>
     </section>
-    <!-- careers  -->
-    <section class="careers">
+    <!-- product-details -->
+    <section class="productDetails">
       <div class="container">
-        <p class="subTitle">
-          <span>How we support you..</span>
-          Our commitment to excellence and diversity is reflected in our work place. And for N&P to achieve its goals,
-          it is imperative that we focus on recruiting talents and assist them in achieving their full potential. We
-          offer the ideal environment to build your personality and career with unlimited exciting opportunities to flex
-          your critical thinking skills and high profile legal practice, including entertainment features and
-          educational programs.
-        </p>
+        <h5 class="title mb-2"> <span> Product SDetails </span></h5>
+
         <div class="row">
-          <div class="col-md-6 p-2">
-            <div class="type">
-              <h6 class="pageTitle"><span>Recruitment</span></h6>
-              <ul>
-                <li>
-                  We are a fast growing law firm committed to excellence and high ethical standards and our clients are
-                  some of the largest corporations, investors and financiers in the world.
-                </li>
-                <li>
-                  As a niche firm, we are always looking for forward-thinking, creative, dynamic and analytical minds
-                  with strong ethics.
-                </li>
-                <li>
-                  If you wish to join our winning team, get in touch in complete confidence.
-                </li>
-                <li>
-                  Please apply to our HR department, enclosing a copy of your updated CV and kindly double check that
-                  your subject line is the practice area you would like to apply for.
-                </li>
-              </ul>
-
-              <div class=" py-2 px-4 text-center ">
-                <a href="jobs.html" class="default-btn"> <i class="fas fa-briefcase me-2"></i> View Jobs
-                  <span></span>
-                </a>
+          <div class="col-md-10 col-lg-8 p-2 m-auto">
+            <div class="productInfo">
+              <div class="product-image">
+                <a href="#!"><img src="img/p1.png"></a>
               </div>
+              <div class="product-content">
+                <a class="productTitle" href="#!"> Isometric Equipment </a>
+                <ul>
+                  <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint dolore eligendi sed itaque,
+                    dignissimos alias? Fuga perferendis quidem sed nisi, dolorum corrupti corporis, cumque rerum ducimus
+                    reprehenderit tempora voluptatem officia?</li>
+                  <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique, repellat esse totam odit
+                    consectetur eum blanditiis voluptatem asperiores, necessitatibus molestias iusto consequuntur iste?
+                    Rerum quas id illum? Ut, quidem iure!</li>
+                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quo quae earum totam deserunt
+                    perferendis, recusandae hic sapiente. Quo dolor dolore recusandae omnis minima deserunt odio cum
+                    beatae distinctio officiis.</li>
+                  <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas et laborum dolores, blanditiis nisi
+                    ipsam vero, quae doloribus qui voluptates maxime repudiandae excepturi facere eius beatae sint modi.
+                    Facilis, consectetur?</li>
+                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus numquam, accusantium delectus
+                    voluptas natus, impedit quaerat sequi sunt voluptatibus temporibus dolor! Voluptatem, ipsum? Nulla
+                    quaerat ea eaque dolorum blanditiis officiis!</li>
+                </ul>
 
-            </div>
-          </div>
-          <div class="col-md-6 p-2">
-            <div class="type">
-              <h6 class="pageTitle"><span>Internship Program</span></h6>
-              <ul>
-                <li>
-                  N&P summer internship program is a unique opportunity for undergraduate law students, they receive
-                  intensive technical skills training and the opportunity to work first hand with each of our
-                  departments. We assist them to transform from gifted academic students to skills lawyers by involving
-                  in divers experience across various practice areas under the supervision of a mentoring lawyer.
-                </li>
-                <li>
-                  We look for candidates with high academic records who are well rounded, hardworking, passionate,
-                  committed and ambitious.
-                </li>
-                <li>
-                  As a legal intern, your work will include legal research, attending court sessions and client meetings
-                  as well as general case management.
-                </li>
-                <li>
-                  For applying please send your updated CV to our HR department and mention “Internship Program” in the
-                  subject line.
-                </li>
-                <li>
-                  Deadline for applying to our internship program is 15 May of every year, if you don’t hear from us
-                  within 4 weeks, please feel free to re-apply next year.
-                </li>
-                <li>
-                  <p>Human Resources department: <a href="mailto:Hr@nahasandpartners.com"> Hr@nahasandpartners.com </a></p>
-                </li>
-              </ul>
-
-
+            
+              </div>
             </div>
           </div>
         </div>
