--- a/Header.html
+++ b/Header.html
@@ -1,5 +1,5 @@
  <!-- ================ NavBar ================= -->
- <nav class="navbar mainNav  navbar-expand-lg navbar-dark">
+ <nav class="navbar mainNav  navbar-expand-lg navbar-light">
    <div class="container">
      <a class="navbar-brand" href="index.html"> <img class="logo" src="img/logo.svg"> </a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
