--- a/Footer.html
+++ b/Footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 p-2 py-4">
-                <img class="logo" src="img/logo_white.svg" alt="">
+                <img class="logo" src="img/logo.svg" alt="">
                 <p class="info">
                     Accredited Quality We'll Provide You Always Latest Technology
                 </p>
