--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <h4 class="title"> <span>About Us </span> </h4>
             <h5 class="ps-md-4"> Accredited Quality We'll Provide You Always Latest Technology </h5>
             <ul>
-              <li> Nawat Medical is a leading supplier of laboratory, medical, surgical, and imaging devices, equipments and
+              <li> Nawat Medical is a leading supplier of laboratory, medical, surgical, and imaging devices, equipments
+                and
                 supplies,
                 in addition to pharmaceuticals in Saudi Arabia.</li>
               <li>We offer a vast line of products to include, but not limited to, medical disposables, medical
@@ -255,7 +256,7 @@
           <div class="col-md-6 order-md-2 mb-5 mb-md-0">
             <section class="googleMap ">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d927764.3550487261!2d47.38299600868243!3d24.724150391445495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f03890d489399%3A0xba974d1c98e79fd5!2z2KfZhNix2YrYp9i2INin2YTYs9i52YjYr9mK2Kk!5e0!3m2!1sar!2seg!4v1648196197721!5m2!1sar!2seg"
+                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3621.5375885013705!2d46.87103368519384!3d24.811282784077097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1zNzM0NCDYt9ix2YrZgiDYp9mE2LQ3MzQ0INi32LHZitmCINin2YTYtNmK2K4g2K7ZhNmK2YHYqSDYqNmGINit2YXYryDYp9mEINir2KfZhtmK2Iwg2KfZhNis2YbYp9iv2LHZitip2YrYriDYrtmE2YrZgdipINio2YYg2K3ZhdivINin2YQg2KvYp9mG2YrYjCDYp9mE2KzZhtin2K_YsdmK2KnYjCDYp9mE2LHZitin2LYg2KfZhNiz2LnZiNiv2YrYqSAzMzEy!5e0!3m2!1sar!2seg!4v1648325930886!5m2!1sar!2seg"
                 frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </section>
           </div>
