--- a/contact.html
+++ b/contact.html
@@ -110,21 +110,14 @@
                   <span><i class="fas fa-clinic-medical"></i></span>
                   <p class="ms-3">
                     Main office :
-                    <a href="#!">Riyadh - Saudi Arabia</a>
-                  </p>
-                </li>
-                <li>
-                  <span><i class="fas fa-phone-office"></i></span>
-                  <p class="ms-3">
-                    Phone :
-                    <a href="tel:#!">(+996) 123456789</a>
+                    <a href="#!"> 7344 Sheikh Khalifa Bin Hamad Al Thani Road, Janadriyah - Riyadh - Saudi Arabia</a>
                   </p>
                 </li>
                 <li>
                   <span><i class="fas fa-phone"></i></span>
                   <p class="ms-3">
-                    Mobile :
-                    <a href="tel:#!">(+996) 0123456789 </a>
+                    Phone :
+                    <a href="tel:+966549561204">+966 54 956 1204 </a>
                   </p>
                 </li>
                 <li>
@@ -154,7 +147,7 @@
           <div class="col-md-6 order-md-2 mb-5 mb-md-0">
             <section class="googleMap ">
               <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d927764.3550487261!2d47.38299600868243!3d24.724150391445495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f03890d489399%3A0xba974d1c98e79fd5!2z2KfZhNix2YrYp9i2INin2YTYs9i52YjYr9mK2Kk!5e0!3m2!1sar!2seg!4v1648196197721!5m2!1sar!2seg"
+              src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3621.5375885013705!2d46.87103368519384!3d24.811282784077097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1zNzM0NCDYt9ix2YrZgiDYp9mE2LQ3MzQ0INi32LHZitmCINin2YTYtNmK2K4g2K7ZhNmK2YHYqSDYqNmGINit2YXYryDYp9mEINir2KfZhtmK2Iwg2KfZhNis2YbYp9iv2LHZitip2YrYriDYrtmE2YrZgdipINio2YYg2K3ZhdivINin2YQg2KvYp9mG2YrYjCDYp9mE2KzZhtin2K_YsdmK2KnYjCDYp9mE2LHZitin2LYg2KfZhNiz2LnZiNiv2YrYqSAzMzEy!5e0!3m2!1sar!2seg!4v1648325930886!5m2!1sar!2seg"
               frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </section>
           </div>
