--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
           <a href="index.html"> home </a>
         </li>
         <li>
-          <a href="blogs.html"> Our Products </a>
+          <a href="#!" class="active" > Our Products </a>
         </li>
       </ul>
       <figure>
