--- a/suppliers.html
+++ b/suppliers.html
@@ -41,10 +41,7 @@
           <a href="index.html"> home </a>
         </li>
         <li>
-          <a href="products.html" > Products </a>
-        </li>
-        <li>
-          <a href="#!" class="active"> Product Details </a>
+          <a href="#!" class="active"> Suppliers </a>
         </li>
       </ul>
       <figure>
@@ -66,44 +63,70 @@
           </g>
         </svg></figure>
     </section>
-    <!-- product-details -->
-    <section class="productDetails">
+    <!-- suppliers -->
+    <section class="suppliers">
       <div class="container">
-        <h5 class="title mb-2"> <span> Product SDetails </span></h5>
+        <div class="row justify-content-center">
 
-        <div class="row">
-          <div class="col-md-10 col-lg-8 p-2 m-auto">
-            <div class="productInfo">
-              <div class="product-image">
-                <a href="#!"><img src="img/p1.png"></a>
-              </div>
-              <div class="product-content">
-                <a class="productTitle" href="#!"> Isometric Equipment </a>
-                <ul>
-                  <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint dolore eligendi sed itaque,
-                    dignissimos alias? Fuga perferendis quidem sed nisi, dolorum corrupti corporis, cumque rerum ducimus
-                    reprehenderit tempora voluptatem officia?</li>
-                  <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique, repellat esse totam odit
-                    consectetur eum blanditiis voluptatem asperiores, necessitatibus molestias iusto consequuntur iste?
-                    Rerum quas id illum? Ut, quidem iure!</li>
-                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quo quae earum totam deserunt
-                    perferendis, recusandae hic sapiente. Quo dolor dolore recusandae omnis minima deserunt odio cum
-                    beatae distinctio officiis.</li>
-                  <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas et laborum dolores, blanditiis nisi
-                    ipsam vero, quae doloribus qui voluptates maxime repudiandae excepturi facere eius beatae sint modi.
-                    Facilis, consectetur?</li>
-                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus numquam, accusantium delectus
-                    voluptas natus, impedit quaerat sequi sunt voluptatibus temporibus dolor! Voluptatem, ipsum? Nulla
-                    quaerat ea eaque dolorum blanditiis officiis!</li>
-                </ul>
-
-            
-              </div>
+          <div class="col-md-4 col-lg-3 p-2">
+            <div class="supplier">
+              <img src="img/supplier.png">
+              <h4> Clinisupplies </h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex alias magnam autem accusantium cum nemo
+                quibusdam, a, ipsum tempore possimus, corrupti dolores molestias pariatur fugit maiores neque atque
+                provident. Dignissimos.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-3 p-2">
+            <div class="supplier">
+              <img src="img/supplier.png">
+              <h4> Clinisupplies </h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex alias magnam autem accusantium cum nemo
+                quibusdam, a, ipsum tempore possimus, corrupti dolores molestias pariatur fugit maiores neque atque
+                provident. Dignissimos.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-3 p-2">
+            <div class="supplier">
+              <img src="img/supplier.png">
+              <h4> Clinisupplies </h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex alias magnam autem accusantium cum nemo
+                quibusdam, a, ipsum tempore possimus, corrupti dolores molestias pariatur fugit maiores neque atque
+                provident. Dignissimos.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-3 p-2">
+            <div class="supplier">
+              <img src="img/supplier.png">
+              <h4> Clinisupplies </h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex alias magnam autem accusantium cum nemo
+                quibusdam, a, ipsum tempore possimus, corrupti dolores molestias pariatur fugit maiores neque atque
+                provident. Dignissimos.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-3 p-2">
+            <div class="supplier">
+              <img src="img/supplier.png">
+              <h4> Clinisupplies </h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex alias magnam autem accusantium cum nemo
+                quibusdam, a, ipsum tempore possimus, corrupti dolores molestias pariatur fugit maiores neque atque
+                provident. Dignissimos.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-3 p-2">
+            <div class="supplier">
+              <img src="img/supplier.png">
+              <h4> Clinisupplies </h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex alias magnam autem accusantium cum nemo
+                quibusdam, a, ipsum tempore possimus, corrupti dolores molestias pariatur fugit maiores neque atque
+                provident. Dignissimos.</p>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+
   </content>
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <!--((((((((((((((((( / content )))))))))))))))))))-->
