--- a/Header.html
+++ b/Header.html
@@ -15,6 +15,9 @@
            <a class="nav-link" href="about.html"> About Us </a>
          </li>
          <li class="nav-item">
+           <a class="nav-link" href="suppliers.html"> Suppliers </a>
+         </li>
+         <li class="nav-item">
            <a class="nav-link" href="products.html"> Our Products </a>
          </li>
          <li class="nav-item">
